# Authorization-Testing

./: README.md  docker-compose.yaml  postgres_initial_script.sh  template.env
api/: Dockerfile  main.py  prestart.sh  pyproject.toml
api/core/: config.py  dependencies.py
api/core/resources/: template.py  user.py
api/migrations/: 20251213_01_R2To1-create-users.sql
api/routers/template/: router.py
api/routers/users/: router.py  schemas.py
api/services/users/: __init__.py  service.py
