[project]
name = "api"
version = "0.1.0"
description = ""
authors = [
    {name = "theaihopgg",email = "theaihopgg@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi (>=0.124.4,<0.125.0)",
    "psycopg (>=3.3.2,<4.0.0)",
    "psycopg[binary] (>=3.3.2,<4.0.0)",
    "jwt (>=1.4.0,<2.0.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "bcrypt (>=5.0.0,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "mypy (>=1.19.0,<2.0.0)",
    "black (>=25.12.0,<26.0.0)"
]
